# TimeSheeterPython

./: .gitignore  README.md  TimeSheeter.py  TimeSheeter.py.bakup 09 2024  app.py  clients.ini  main.py  pyproject.toml  requirements.txt
templates/: timesheet.html  timesheet_pdf.html
